spacing fix

--- a/src/styles/layout/_about.scss
+++ b/src/styles/layout/_about.scss
@@ -24,7 +24,7 @@
 
     &__compass-img {
         display: none;
-        @media screen and (min-width: $screen-xl) {
+        @media screen and (min-width: $screen-md) {
             display: block;
             padding-right: $spacing-sm;
             width: 40%;
@@ -46,14 +46,14 @@
 
     &__container:nth-of-type(2) {
             margin: calc(7vh + 35px) 0 7vh;
-            @media screen and (min-width: $screen-xl) {
+            @media screen and (min-width: $screen-md) {
                 @include d-flex(center, space-between);
                 margin: 15vh 0;
             }
     }
 
     &__container:nth-of-type(2) > &__article {
-        @media screen and (min-width: $screen-xl) {
+        @media screen and (min-width: $screen-md) {
             width: 50%;
         }   
     }
